# coq-idt

./: LICENSE  Makefile  README.md  _CoqProject  coq-idt.opam
.github/: dependabot.yml
.github/workflows/: build.yml
examples/: tutorial.v
theories/: all.v  idt.v  utils.v
theories/examples/: tutorial.v
